--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -533,6 +533,7 @@ display: block; /* Show answer when active */
     gap: 15px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     max-width: 90%;
+    width: 90%;
     
 }
 
@@ -578,6 +579,7 @@ display: block; /* Show answer when active */
 
     .cookie-btn {
         width: 45%;
+
     }
 }
 /* Hover Effect */
