--- a/final.css
+++ b/final.css
@@ -1673,7 +1673,7 @@ details[open] .info-box {
   gap: 15px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   max-width: 90%;
-  
+  width: 90%;
 }
 
 #cookie-banner p {
