--- a/final.css
+++ b/final.css
@@ -612,11 +612,14 @@ body {
       height: 867px;
       width: 698px;
     }
-    #content_page{
-       
-        background-size: 100% 20px ;    
-    }
+   
     #left-margin{
+      background-size: 100% 20px ;
+    }
+    #output-container{
+      background-size: 100% 20px ;
+    }
+    #left-margin-in{
         line-height: 20px;
         margin-top: 7px;
         font-size: 13px;
@@ -649,15 +652,14 @@ body {
       height: 993px;
     }
     
-    #content_page{
-       
-        background-size: 100% 23px ;  
-    }
-    #left-margin{
+   
+
+    #left-margin-in{
         line-height: 23px;
         margin-top: 7px;
         font-size: 15px;
         word-spacing: 10px;
+        
 
         
     }
@@ -676,7 +678,17 @@ body {
     
       grid-template-columns: repeat( auto-fill, minmax(25%, 1fr) );
     }
+    #output-container{
+      background-size: 100% 23px ;  
+    }
+    #left-margin{
+      background-size: 100% 23px ;  
+      
+    }
+    .how-it-works-grid {
     
+      grid-template-columns: repeat( auto-fill, minmax(25%, 1fr) );
+    }
 }
 @keyframes spin {
     to { transform: rotate(360deg); }
@@ -844,8 +856,12 @@ background-color: #0056b3;
     height: fit-content;
     min-width: 10%;
     max-width: 30%;
+    background-image: linear-gradient(#00000066 0.05em, transparent 0.1em);
+        height: auto;
+
     width: 0%;
     color: rgb(0, 15, 100);
+    display: flex;
     /* margin-top: 9px; */
     /* line-height: 23px; */
     
@@ -888,6 +904,7 @@ background-color: #0056b3;
     position: relative;
     display: flex;
     font-family: 'AnotherFont','CustomFont';
+    background-image: linear-gradient(#00000066 0.05em, transparent 0.1em);
     
     
     
@@ -909,7 +926,7 @@ background-color: #0056b3;
     display: flex;
     flex-direction: row;
     height: 100%;
-    background-image: linear-gradient(#00000066 0.05em, transparent 0.1em);
+    /* background-image: linear-gradient(#00000066 0.05em, transparent 0.1em); */
     /* background-size: 100% 23px;     */
     overflow-y: scroll;       
     background-attachment: local;
@@ -1161,6 +1178,7 @@ z-index: 1001;
 
 #drawing-canvas {
     border: 1px solid #000000;
+    display: none;
    
 
 
@@ -1327,10 +1345,10 @@ td {
   font-size: 24px !important; /* Huge size - 24px */
 }
 /* Remove margin from <p> tags inside the Quill editor */
-#output-inner-container p {
-  margin: 0 !important; /* Remove margin */
-  padding: 0 !important; /* Remove padding */
-}
+/* #output-inner-container p {
+  margin: 0 ; 
+  padding: 0 ; 
+} */
 
 
 
@@ -1779,4 +1797,11 @@ details[open] .info-box {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+#left-margin-in{
+
+  overflow: clip;
+  height: auto;
+  width: 100%;
+  word-wrap :  break-word;
 }
