--- a/final.css
+++ b/final.css
@@ -949,7 +949,7 @@ background-color: #0056b3;
     height: 100%;
     /* background-image: linear-gradient(#00000066 0.05em, transparent 0.1em); */
     /* background-size: 100% 23px;     */
-    overflow-y: scroll;       
+    overflow-y: hidden;       
     background-attachment: local;
     scrollbar-width: thin;
 
