--- a/final.css
+++ b/final.css
@@ -30,7 +30,8 @@
 
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
