--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -1,6 +1,7 @@
 /* Basic Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+
     line-height: 1.6;
     margin: 0;
     padding: 0;
