--- a/final.css
+++ b/final.css
@@ -26,7 +26,9 @@
 }
 }/* new frontend */
 
-
+html{
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif !important;
+}
 
 
 body {
